# vvgo-mall

./: .bazelrc  .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  DOWNLOAD.bzl  LICENSE  Makefile  README.md  WORKSPACE  buf.gen.yaml  docker.bzl  generate.go  go.mod  go.sum  modd.conf  repos.bzl
.github/: dependabot.yml
.github/workflows/: codeball.yml  codeql-analysis.yml  go.yml
api/common/conf/: auth.proto  bootstrap.proto  conf.proto  config.proto  data.proto  logger.proto  oss.proto  registry.proto  server.proto  tracer.proto
api/common/pagination/: pagination.proto
api/common/service/: service.proto
api/pagination/: pagination.proto
app/account/service/: BUILD.bazel
app/auth/service/: BUILD.bazel
app/paser/service/: .air.conf  BUILD.bazel
app/shop/admin/: BUILD.bazel
app/sms/interface/: BUILD.bazel
app/taoke/interface/: BUILD.bazel
app/ums/service/: BUILD.bazel
db/: skr.sql
deploy/docker-compose/: .env  docker-compose-dev.yml  docker-compose-env.yaml  docker-compose-prod.yml  docker-compose.yaml  init.sh
deploy/docker-compose/air/: Dockerfile
deploy/docker-compose/efak/: Dockerfile  entrypoint.sh
deploy/docker-compose/elasticsearch/: Dockerfile
deploy/docker-compose/elk/: .env  docker-compose.yaml  init.sh
deploy/docker-compose/golang/: Dockerfile
deploy/docker-compose/mysql/: Dockerfile
deploy/docker-compose/nginx/: Dockerfile  build.sh  nginx.conf
deploy/docker-compose/node/: Dockerfile
deploy/docker-compose/openresty/: nginx.conf
deploy/docker-compose/php-fpm/: Dockerfile  build.sh  php-fpm.conf  php.ini
deploy/docker-compose/prometheus/: prometheus.yml
deploy/docker-compose/python/: Dockerfile
deploy/docker-compose/redis/: Dockerfile  redis.conf
docs/doc/: 支付服务.md  视频服务.md
docs/openapi/account/: openapi.yaml
docs/sql/account/: account_login_log.sql  account_platform.sql  account_user.sql  staff.sql  user_card.sql
docs/sql/auth/: auth.sql  auth_menu.sql  auth_role.sql  auth_role_staff.sql  auth_system.sql  auth_system_menu.sql
docs/sql/cart/: cart.sql
docs/sql/comment/: comment.sql
docs/sql/coupon/: coupon_batch.sql
docs/sql/glue/: glue_activity.sql  glue_session.sql  glue_session_prizes.sql  glue_session_prizes_timer.sql  glue_user_draw_record.sql
docs/sql/order/: order.sql  reserve.sql
docs/sql/pay/: pay_log_data.sql  pay_notify_app_log.sql  pay_refund.sql  pay_repeat_transaction.sql  pay_transaction.sql  pay_transaction_extension.sql
docs/sql/pms/: product_attr.sql  product_attr_value.sql  product_spu.sql
docs/sql/product/: pms.sql  product_album.sql  product_attr.sql  product_attr_value.sql  product_brand.sql  product_brands.sql  product_category.sql  product_comment.sql  product_member_price.sql  product_sku.sql  product_sku_stock.sql  product_spu.sql  product_spu_sku_attr_map.sql
docs/sql/sys/: casbin_rules.sql  sys_api.sql  sys_dept.sql  sys_dict.sql  sys_dict_data.sql  sys_dict_type.sql  sys_group.sql  sys_jwt_blacklist.sql  sys_login_log.sql  sys_menu.sql  sys_permission.sql  sys_post.sql  sys_role.sql  sys_role_api.sql  sys_role_dept.sql  sys_role_menu.sql  sys_role_permission.sql  sys_system.sql  sys_system_menu.sql  sys_user.sql  sys_user_post.sql  sys_user_role.sql  user_group.sql
docs/sql/ums/: account_login_log.sql  account_platform.sql  account_user.sql  auth_item.sql  auth_ms.sql  auth_ms_menu.sql  auth_role.sql  auth_role_staff.sql  skr_member.sql  staff_info.sql
docs/sql/user/: member.sql
docs/sql/video/: video.sql
ent/: init.sh
ent/proto/entpb/: BUILD.bazel  user.proto
ent/proto/options/: BUILD.bazel  opts.proto
ent/schema/: BUILD.bazel  user.go
examples/concurrency/channel/: BUILD.bazel  main.go
examples/concurrency/mutex/: BUILD.bazel  main  main.go
examples/concurrency/remutex/: BUILD.bazel  main.go
examples/concurrency/waitgroup/: BUILD.bazel  main.go
pkg/auth/jwtauth/: BUILD.bazel  auth.go  auth_test.go  claims.go  options.go  token.go
pkg/bootstrap/: BUILD.bazel  bootstrap.go  config.go  logger.go  oss.go  redis.go  registry.go  service_info.go  tracer.go
pkg/bootstrap/client/: BUILD.bazel  redis.go
pkg/bootstrap/config/: BUILD.bazel  config.go
pkg/bootstrap/flag/: BUILD.bazel
pkg/bootstrap/logger/: BUILD.bazel
pkg/bootstrap/registry/: BUILD.bazel  registry.go
pkg/bootstrap/server/: BUILD.bazel  grpc.go  http.go
pkg/bootstrap/server/gin/: BUILD.bazel
pkg/bootstrap/tracer/: BUILD.bazel
pkg/captcha/: BUILD.bazel
pkg/client/: grpc.go
pkg/convert/: convert.go
pkg/crypto/aes/: BUILD.bazel  aes.go
pkg/crypto/bcrypt/: BUILD.bazel  bcrypt.go
pkg/crypto/crc32/: BUILD.bazel  crc32_test.go
pkg/crypto/des/: BUILD.bazel  des.go  des_test.go
pkg/crypto/md5/: BUILD.bazel
pkg/crypto/pbkdf2/: BUILD.bazel  pbkdf2.go
pkg/crypto/rsa/: BUILD.bazel  rsa.go  rsa_test.go
pkg/crypto/sha1/: BUILD.bazel
pkg/crypto/sha256/: BUILD.bazel  sha256_test.go
pkg/dataoke/: BUILD.bazel  dataoke.go  dataoke_test.go  jd.go  model.go  pdd.go  taobao.go  vip.go
pkg/datasource/mongox/: BUILD.bazel  delete.go  insert.go  mongox.go  query.go  update.go
pkg/encoding/base64/: BUILD.bazel  base64.go
pkg/encoding/hex/: BUILD.bazel
pkg/ent/hooks/: BUILD.bazel  audit.go
pkg/ent/mixin/: BUILD.bazel  audit.go
pkg/entgo/mixin/: BUILD.bazel
pkg/errors/: BUILD.bazel
pkg/flag/: daemon.go  flag.go
pkg/gin/: BUILD.bazel
pkg/logger/: BUILD.bazel  logger.go  zap.go  zap_test.go
pkg/meta/: BUILD.bazel  meta.go
pkg/middleware/casbin/: BUILD.bazel  casbin.go
pkg/middleware/jwt/: jwt.go
pkg/middleware/oauth/: BUILD.bazel  oauth.go
pkg/oss/: BUILD.bazel  oss.go
pkg/oss/aliyun/: BUILD.bazel  aliyun.go  aliyun_test.go
pkg/oss/aws/: BUILD.bazel  s3.go
pkg/oss/qiniu/: BUILD.bazel  qiniu.go
pkg/random/: BUILD.bazel  random.go
pkg/request/: BUILD.bazel  request.go
pkg/service/: BUILD.bazel  info.go  name.go
pkg/session/: BUILD.bazel  session.go
pkg/tracer/: tracer.go
pkg/util/: BUILD.bazel  util.go
pkg/util/entgo/: entgo.go  (+1 more)
pkg/validate/: BUILD.bazel  validate.go
static/: auth.html
tools/: go.mod  go.sum  tools.go
(+686 files in other folders)
