load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/lalifeier/vvgo-mall
# gazelle:proto disable
# gazelle:exclude api third_party
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=repos.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable",
    ],
    command = "update-repos",
)

load("//:docker.bzl", "publish_service")

repository_name = "lalifeier"

repository_version = "latest"

push_container = False

publish_service("account", "service", repository_name, repository_version, push_container)

publish_service("admin", "admin", repository_name, repository_version, push_container)
