load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dataoke",
    srcs = [
        "dataoke.go",
        "jd.go",
        "model.go",
        "pdd.go",
        "taobao.go",
        "vip.go",
    ],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/dataoke",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/convert",
        "//pkg/util/crypto/md5",
        "//pkg/util/random",
        "//pkg/util/request",
    ],
)

go_test(
    name = "dataoke_test",
    srcs = ["dataoke_test.go"],
    embed = [":dataoke"],
)
