load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gin",
    srcs = ["gin.go"],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/gin",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/errors:errors_go_proto",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_kratos_kratos_v2//middleware",
        "@com_github_go_kratos_kratos_v2//transport/http",
    ],
)
