load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = [
        "logger.go",
        "zap.go",
    ],
    importpath = "vvgo-mall/pkg/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kratos_kratos_v2//log",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "logger_test",
    srcs = ["zap_test.go"],
    embed = [":logger"],
    deps = [
        "@com_github_go_kratos_kratos_v2//log",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
