load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "entpb_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
    deps = ["//options:options_proto"],
)

go_proto_library(
    name = "entpb_go_proto",
    importpath = "github.com/lalifeier/vvgo-mall/ent/proto/entpb",
    proto = ":entpb_proto",
    visibility = ["//visibility:public"],
    deps = ["//options:opts_proto"],
)

go_library(
    name = "entpb",
    embed = [":entpb_go_proto"],
    importpath = "github.com/lalifeier/vvgo-mall/ent/proto/entpb",
    visibility = ["//visibility:public"],
)
