load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "ent_proto",
    srcs = ["opts.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "ent_go_proto",
    importpath = "entgo.io/contrib/entproto/cmd/protoc-gen-ent/options/ent",
    proto = ":ent_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "ent",
    embed = [":ent_go_proto"],
    importpath = "entgo.io/contrib/entproto/cmd/protoc-gen-ent/options/ent",
    visibility = ["//visibility:public"],
)
