load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "channel_lib",
    srcs = ["main.go"],
    importpath = "github.com/lalifeier/vvgo-mall/examples/concurrency/channel",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "channel",
    embed = [":channel_lib"],
    visibility = ["//visibility:public"],
)
