load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mutex_lib",
    srcs = ["main.go"],
    importpath = "github.com/lalifeier/vvgo-mall/examples/concurrency/mutex",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "mutex",
    embed = [":mutex_lib"],
    visibility = ["//visibility:public"],
)
