load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "waitgroup_lib",
    srcs = ["main.go"],
    importpath = "github.com/lalifeier/vvgo-mall/examples/concurrency/waitgroup",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "waitgroup",
    embed = [":waitgroup_lib"],
    visibility = ["//visibility:public"],
)
