load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["redis.go"],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/bootstrap/client",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/api/go/common/conf",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_redis_redis_extra_redisotel_v8//:redisotel",
        "@com_github_go_redis_redis_v8//:redis",
    ],
)
