load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/bootstrap/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kratos_kratos_contrib_config_apollo_v2//:apollo",
        "@com_github_go_kratos_kratos_contrib_config_consul_v2//:consul",
        "@com_github_go_kratos_kratos_contrib_config_etcd_v2//:etcd",
        "@com_github_go_kratos_kratos_contrib_config_kubernetes_v2//:kubernetes",
        "@com_github_go_kratos_kratos_contrib_config_nacos_v2//:nacos",
        "@com_github_go_kratos_kratos_contrib_config_polaris_v2//:polaris",
        "@com_github_go_kratos_kratos_v2//config",
        "@com_github_go_kratos_kratos_v2//config/file",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_nacos_group_nacos_sdk_go//clients",
        "@com_github_nacos_group_nacos_sdk_go//common/constant",
        "@com_github_nacos_group_nacos_sdk_go//vo",
        "@com_github_polarismesh_polaris_go//:polaris-go",
        "@io_etcd_go_etcd_client_v3//:client",
        "@io_k8s_client_go//util/homedir",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
