load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "registry",
    srcs = ["registry.go"],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/bootstrap/registry",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_chassis_sc_client//:sc-client",
        "@com_github_go_kratos_kratos_contrib_registry_consul_v2//:consul",
        "@com_github_go_kratos_kratos_contrib_registry_etcd_v2//:etcd",
        "@com_github_go_kratos_kratos_contrib_registry_eureka_v2//:eureka",
        "@com_github_go_kratos_kratos_contrib_registry_kubernetes_v2//:kubernetes",
        "@com_github_go_kratos_kratos_contrib_registry_nacos_v2//:nacos",
        "@com_github_go_kratos_kratos_contrib_registry_polaris_v2//:polaris",
        "@com_github_go_kratos_kratos_contrib_registry_servicecomb_v2//:servicecomb",
        "@com_github_go_kratos_kratos_contrib_registry_zookeeper_v2//:zookeeper",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_zookeeper_zk//:zk",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_nacos_group_nacos_sdk_go//clients",
        "@com_github_nacos_group_nacos_sdk_go//common/constant",
        "@com_github_nacos_group_nacos_sdk_go//vo",
        "@com_github_polarismesh_polaris_go//api",
        "@com_github_polarismesh_polaris_go//pkg/model",
        "@io_etcd_go_etcd_client_v3//:client",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_client_go//util/homedir",
    ],
)
