load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "grpc.go",
        "http.go",
    ],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/bootstrap/server",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/api/go/common/conf",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware",
        "@com_github_go_kratos_kratos_v2//middleware/recovery",
        "@com_github_go_kratos_kratos_v2//middleware/tracing",
        "@com_github_go_kratos_kratos_v2//registry",
        "@com_github_go_kratos_kratos_v2//transport/grpc",
        "@com_github_go_kratos_kratos_v2//transport/http",
        "@com_github_gorilla_handlers//:handlers",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
