load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rsa",
    srcs = ["rsa.go"],
    importpath = "vvgo-mall/pkg/crypto/rsa",
    visibility = ["//visibility:public"],
)

go_test(
    name = "rsa_test",
    srcs = ["rsa_test.go"],
    embed = [":rsa"],
    deps = [
        "//pkg/encoding/base64:go_default_library",
        "@com_github_go_playground_assert_v2//:assert",
    ],
)
