load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mongox",
    srcs = [
        "delete.go",
        "insert.go",
        "mongox.go",
        "query.go",
        "update.go",
    ],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/datasource/mongox",
    visibility = ["//visibility:public"],
    deps = [
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
