load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mixin",
    srcs = ["audit.go"],
    importpath = "vvgo-mall/pkg/ent/mixin",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ent/hooks:go_default_library",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect",
        "@io_entgo_ent//schema/field",
        "@io_entgo_ent//schema/mixin",
    ],
)
