load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "casbin",
    srcs = ["casbin.go"],
    importpath = "vvgo-mall/pkg/middleware/casbin",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/errors:errors_go_proto",
        "@com_github_casbin_casbin_v2//:casbin",
        "@com_github_go_kratos_kratos_v2//middleware",
        "@com_github_go_kratos_kratos_v2//transport",
        "@com_github_go_kratos_kratos_v2//transport/http",
    ],
)
