load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "oauth",
    srcs = ["oauth.go"],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/middleware/oauth",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/errors:errors_go_proto",
        "@com_github_go_kratos_kratos_v2//middleware",
        "@com_github_go_kratos_kratos_v2//transport",
        "@com_github_go_kratos_kratos_v2//transport/http",
        "@com_github_go_oauth2_oauth2_v4//server",
    ],
)
