load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aliyun",
    srcs = ["aliyun.go"],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/oss/aliyun",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/oss",
        "//pkg/util/convert",
        "@com_github_aliyun_aliyun_oss_go_sdk//oss",
    ],
)

go_test(
    name = "aliyun_test",
    srcs = ["aliyun_test.go"],
    embed = [":aliyun"],
    deps = ["@com_github_aliyun_aliyun_oss_go_sdk//oss"],
)
