load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "aws",
    srcs = ["s3.go"],
    importpath = "github.com/lalifeier/vvgo-mall/pkg/oss/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/oss",
        "//pkg/util",
        "//pkg/util/convert",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
    ],
)
